@@ -37,6 +37,7 @@ import javax.swing.Icon;
 
 import com.vividsolutions.jump.workbench.ui.LayerViewPanel;
 import com.vividsolutions.jump.workbench.ui.images.IconLoader;
+import com.vividsolutions.jump.workbench.ui.images.famfam.IconLoaderFamFam;
 import com.vividsolutions.jump.workbench.ui.renderer.FeatureSelectionRenderer;
 
 
@@ -46,7 +47,8 @@ public class SelectFeaturesTool extends SelectTool {
     }
 
     public Icon getIcon() {
-        return IconLoader.icon("Select.gif");
+        //return IconLoader.icon("Select.gif");
+    	return IconLoaderFamFam.icon("cursor.png");
     }
     
     public void activate(LayerViewPanel layerViewPanel) {
