@@ -38,6 +38,7 @@ import javax.swing.ImageIcon;
 import com.vividsolutions.jump.workbench.plugin.AbstractPlugIn;
 import com.vividsolutions.jump.workbench.plugin.PlugInContext;
 import com.vividsolutions.jump.workbench.ui.images.IconLoader;
+import com.vividsolutions.jump.workbench.ui.images.famfam.IconLoaderFamFam;
 
 
 public class OutputWindowPlugIn extends AbstractPlugIn {
@@ -52,6 +53,6 @@ public class OutputWindowPlugIn extends AbstractPlugIn {
     }
 
     public ImageIcon getIcon() {
-        return IconLoader.icon("Frame.gif");
+        return IconLoaderFamFam.icon("application_view_list.png");
     }
 }
